CocaColaProjectBIDev/src/objects/Milestone_Synergy_Management__c.object
<CustomObject>
    <fields>
        <fullName>ABP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ABP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Capex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day1_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Day1 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depreciation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_OPEX__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other OPEX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POV_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POV　Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POV_Plan_ABP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POV　Plan (ABP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POV_RE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>POV  RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Milestone_Synergy_Management</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>IMAGE(&quot;/resource/Green&quot;,&quot;Green&quot;)</formula>
        <label>test</label>
        <type>Text</type>
    </fields>
    <label>予算管理</label>
    <nameField>
        <label>年度</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>